src/test/ui/traits/bound/on-structs-and-enums-locals.stderr
error[E0277]: the trait bound `usize: Trait` is not satisfied
  --> $DIR/on-structs-and-enums-locals.rs:15:14
   |
LL |     let baz: Foo<usize> = loop { };
   |              ^^^^^^^^^^ the trait `Trait` is not implemented for `usize`
   |
note: required by a bound in `Foo`
  --> $DIR/on-structs-and-enums-locals.rs:5:14
   |
LL | struct Foo<T:Trait> {
   |              ^^^^^ required by this bound in `Foo`

error[E0277]: the trait bound `{integer}: Trait` is not satisfied
  --> $DIR/on-structs-and-enums-locals.rs:10:15
   |
LL |     let foo = Foo {
   |               ^^^ the trait `Trait` is not implemented for `{integer}`
   |
note: required by a bound in `Foo`
  --> $DIR/on-structs-and-enums-locals.rs:5:14
   |
LL | struct Foo<T:Trait> {
   |              ^^^^^ required by this bound in `Foo`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
